--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,74 +16,87 @@
         app:layout_constraintEnd_toStartOf="@+id/btn_01"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck" />
+
     <Button
         android:id="@+id/btn_01"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="292dp"
         android:onClick="onButtonClick"
         app:layout_constraintEnd_toStartOf="@+id/btn_02"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.743"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
+
     <Button
         android:id="@+id/btn_02"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginStart="276dp"
+        android:layout_marginTop="292dp"
         android:onClick="onButtonClick"
         app:layout_constraintEnd_toStartOf="@+id/btn_03"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="UnknownId" />
+        tools:ignore="UnknownId,SpeakableTextPresentCheck" />
+
     <Button
         android:id="@+id/btn_10"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="292dp"
         android:onClick="onButtonClick"
         app:layout_constraintEnd_toStartOf="@+id/btn_11"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
+
     <Button
         android:id="@+id/btn_11"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="180dp"
         android:onClick="onButtonClick"
         app:layout_constraintEnd_toStartOf="@+id/btn_12"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.743"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
+
     <Button
         android:id="@+id/btn_12"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginStart="276dp"
+        android:layout_marginTop="180dp"
         android:onClick="onButtonClick"
         app:layout_constraintEnd_toStartOf="@+id/btn_13"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="UnknownId,SpeakableTextPresentCheck" />
+
     <Button
         android:id="@+id/btn_21"
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="180dp"
         android:onClick="onButtonClick"
         app:layout_constraintEnd_toStartOf="@+id/btn_22"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
+
     <Button
         android:id="@+id/btn_22"
         android:layout_width="90dp"
@@ -92,19 +105,23 @@
         android:layout_marginTop="60dp"
         android:onClick="onButtonClick"
         app:layout_constraintEnd_toStartOf="@+id/btn_23"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.785"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck" />
+
     <Button
         android:id="@+id/btn_23"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="276dp"
         android:layout_marginTop="60dp"
         android:onClick="onButtonClick"
         app:layout_constraintEnd_toStartOf="@+id/btn_24"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="UnknownId,SpeakableTextPresentCheck" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
